ext/thin_backend/parser.c
#line 1 "parser.rl"
/**
 * Copyright (c) 2005 Zed A. Shaw
 * You can redistribute it and/or modify it under the same terms as Ruby.
 */
#include "parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>

#define LEN(AT, FPC)       (FPC - buffer - parser->AT)
#define MARK(M,FPC)        (parser->M = (FPC) - buffer)
#define PTR_TO(F)          (buffer + parser->F)
#define PARSER_ERROR       (parser->error = 1)

#define MAX_FIELD_NAME     256
#define MAX_FIELD_VALUE    80 * 1024
#define MAX_REQUEST_URI    1024 * 12
#define MAX_FRAGMENT       1024 /* Don't know if this length is specified somewhere or not */
#define MAX_REQUEST_PATH   1024
#define MAX_QUERY_STRING   1024 * 10
#define MAX_CONTENT_LENGTH 20
#define MAX_CONTENT_TYPE   1024
#define MAX_HEADER         1024 * (80 + 32)

/** machine **/
#line 165 "parser.rl"


/** Data **/

#line 35 "parser.c"
static const int http_parser_start = 1;
static const int http_parser_first_final = 114;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;

#line 169 "parser.rl"

int http_parser_init(http_parser *parser)  {
  int cs = 0;
  
#line 47 "parser.c"
	{
	cs = http_parser_start;
	}
#line 173 "parser.rl"
  parser->cs = cs;
  parser->body_start = 0;
  parser->content_len = 0;
  parser->mark = 0;
  parser->nread = 0;
  parser->field_len = 0;
  parser->field_start = 0;
  parser->error = 0;

  return(1);
}


/** exec **/
size_t http_parser_execute(http_parser *parser, const char *buffer, size_t len, size_t off)  {
  const char *p, *pe;
  int cs = parser->cs;

  assert(off <= len && "offset past end of buffer");

  p = buffer+off;
  pe = buffer+len;

  assert(*pe == '\0' && "pointer does not end on NUL");
  assert(pe - p == len - off && "pointers aren't same distance");


  
#line 80 "parser.c"
	{
	if ( p == pe )
		goto _out;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 36: goto tr0;
		case 95: goto tr0;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto tr0;
	} else if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto tr0;
	} else
		goto tr0;
	goto st0;
st0:
	goto _out0;
tr0:
#line 31 "parser.rl"
	{ MARK(mark, p); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _out2;
case 2:
#line 110 "parser.c"
	switch( (*p) ) {
		case 32: goto tr2;
		case 36: goto st95;
		case 95: goto st95;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st95;
	} else if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st95;
	} else
		goto st95;
	goto st0;
tr2:
#line 64 "parser.rl"
	{ 
    if (parser->request_method != NULL) 
      parser->request_method(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st3;
st3:
	if ( ++p == pe )
		goto _out3;
case 3:
#line 136 "parser.c"
	switch( (*p) ) {
		case 42: goto tr4;
		case 43: goto tr5;
		case 47: goto tr6;
		case 58: goto tr7;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto tr5;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr5;
	} else
		goto tr5;
	goto st0;
tr4:
#line 31 "parser.rl"
	{ MARK(mark, p); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _out4;
case 4:
#line 160 "parser.c"
	if ( (*p) == 32 )
		goto tr8;
	goto st0;
tr8:
#line 68 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_REQUEST_URI) { PARSER_ERROR; goto _out5; }
    if (parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st5;
tr104:
#line 90 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_REQUEST_PATH) { PARSER_ERROR; goto _out5; }
    if (parser->request_path != NULL)
      parser->request_path(parser->data, PTR_TO(mark), len);
  }
#line 68 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_REQUEST_URI) { PARSER_ERROR; goto _out5; }
    if (parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st5;
tr114:
#line 76 "parser.rl"
	{ MARK(query_start, p); }
#line 77 "parser.rl"
	{
    size_t len = LEN(query_start, p);
    
    if (len > MAX_QUERY_STRING) { PARSER_ERROR; goto _out5; } 
    if (parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), len);
  }
#line 68 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_REQUEST_URI) { PARSER_ERROR; goto _out5; }
    if (parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st5;
tr117:
#line 77 "parser.rl"
	{
    size_t len = LEN(query_start, p);
    
    if (len > MAX_QUERY_STRING) { PARSER_ERROR; goto _out5; } 
    if (parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), len);
  }
#line 68 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_REQUEST_URI) { PARSER_ERROR; goto _out5; }
    if (parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st5;
st5:
	if ( ++p == pe )
		goto _out5;
case 5:
#line 234 "parser.c"
	if ( (*p) == 72 )
		goto tr9;
	goto st0;
tr9:
#line 31 "parser.rl"
	{ MARK(mark, p); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _out6;
case 6:
#line 246 "parser.c"
	if ( (*p) == 84 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _out7;
case 7:
	if ( (*p) == 84 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _out8;
case 8:
	if ( (*p) == 80 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _out9;
case 9:
	if ( (*p) == 47 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _out10;
case 10:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _out11;
case 11:
	if ( (*p) == 46 )
		goto st12;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto st0;
st12:
	if ( ++p == pe )
		goto _out12;
case 12:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _out13;
case 13:
	if ( (*p) == 13 )
		goto tr17;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
tr17:
#line 85 "parser.rl"
	{	
    if (parser->http_version != NULL)
      parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
  }
	goto st14;
tr27:
#line 40 "parser.rl"
	{
    size_t vlen = LEN(mark, p);
    
    if (vlen > MAX_FIELD_VALUE) { PARSER_ERROR; goto _out14; }
    if (parser->http_field != NULL)
      parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), vlen);
  }
	goto st14;
tr89:
#line 48 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_CONTENT_LENGTH) { PARSER_ERROR; goto _out14; }
    if (parser->content_length != NULL)
      parser->content_length(parser->data, PTR_TO(mark), len);
  }
	goto st14;
tr96:
#line 56 "parser.rl"
	{
    size_t len = LEN(mark, p);
    
    if (len > MAX_CONTENT_TYPE) { PARSER_ERROR; goto _out14; }
    if (parser->content_type != NULL)
      parser->content_type(parser->data, PTR_TO(mark), len);
  }
	goto st14;
st14:
	if ( ++p == pe )
		goto _out14;
case 14:
#line 344 "parser.c"
	if ( (*p) == 10 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _out15;
case 15:
	switch( (*p) ) {
		case 13: goto st16;
		case 33: goto tr20;
		case 67: goto tr21;
		case 99: goto tr21;
		case 124: goto tr20;
		case 126: goto tr20;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr20;
		} else if ( (*p) >= 35 )
			goto tr20;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr20;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr20;
		} else
			goto tr20;
	} else
		goto tr20;
	goto st0;
st16:
	if ( ++p == pe )
		goto _out16;
case 16:
	if ( (*p) == 10 )
		goto tr22;
	goto st0;
tr22:
#line 106 "parser.rl"
	{ 
    parser->body_start = p - buffer + 1; 
    if(parser->header_done != NULL)
      parser->header_done(parser->data, p + 1, pe - p - 1);
    goto _out114;
  }
	goto st114;
st114:
	if ( ++p == pe )
		goto _out114;
case 114:
#line 398 "parser.c"
	goto st0;
tr20:
#line 33 "parser.rl"
	{ MARK(field_start, p); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _out17;
case 17:
#line 408 "parser.c"
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 99: goto st40;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
tr24:
#line 34 "parser.rl"
	{
    parser->field_len = LEN(field_start, p);
    if (parser->field_len > MAX_FIELD_NAME) { PARSER_ERROR; goto _out18; }
  }
	goto st18;
tr28:
#line 39 "parser.rl"
	{ MARK(mark, p); }
	goto st18;
st18:
	if ( ++p == pe )
		goto _out18;
case 18:
#line 450 "parser.c"
	switch( (*p) ) {
		case 13: goto tr27;
		case 32: goto tr28;
		case 67: goto tr29;
		case 99: goto tr29;
	}
	goto tr26;
tr26:
#line 39 "parser.rl"
	{ MARK(mark, p); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _out19;
case 19:
#line 466 "parser.c"
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 99: goto st20;
	}
	goto st19;
tr29:
#line 39 "parser.rl"
	{ MARK(mark, p); }
	goto st20;
st20:
	if ( ++p == pe )
		goto _out20;
case 20:
#line 481 "parser.c"
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 79: goto st21;
		case 99: goto st20;
		case 111: goto st21;
	}
	goto st19;
st21:
	if ( ++p == pe )
		goto _out21;
case 21:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 78: goto st22;
		case 99: goto st20;
		case 110: goto st22;
	}
	goto st19;
st22:
	if ( ++p == pe )
		goto _out22;
case 22:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 84: goto st23;
		case 99: goto st20;
		case 116: goto st23;
	}
	goto st19;
st23:
	if ( ++p == pe )
		goto _out23;
case 23:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 69: goto st24;
		case 99: goto st20;
		case 101: goto st24;
	}
	goto st19;
st24:
	if ( ++p == pe )
		goto _out24;
case 24:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 78: goto st25;
		case 99: goto st20;
		case 110: goto st25;
	}
	goto st19;
st25:
	if ( ++p == pe )
		goto _out25;
case 25:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 84: goto st26;
		case 99: goto st20;
		case 116: goto st26;
	}
	goto st19;
st26:
	if ( ++p == pe )
		goto _out26;
case 26:
	switch( (*p) ) {
		case 13: goto tr27;
		case 45: goto st27;
		case 67: goto st20;
		case 99: goto st20;
	}
	goto st19;
st27:
	if ( ++p == pe )
		goto _out27;
case 27:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 76: goto st28;
		case 84: goto st36;
		case 99: goto st20;
		case 108: goto st28;
		case 116: goto st36;
	}
	goto st19;
st28:
	if ( ++p == pe )
		goto _out28;
case 28:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 69: goto st29;
		case 99: goto st20;
		case 101: goto st29;
	}
	goto st19;
st29:
	if ( ++p == pe )
		goto _out29;
case 29:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 78: goto st30;
		case 99: goto st20;
		case 110: goto st30;
	}
	goto st19;
st30:
	if ( ++p == pe )
		goto _out30;
case 30:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 71: goto st31;
		case 99: goto st20;
		case 103: goto st31;
	}
	goto st19;
st31:
	if ( ++p == pe )
		goto _out31;
case 31:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 84: goto st32;
		case 99: goto st20;
		case 116: goto st32;
	}
	goto st19;
st32:
	if ( ++p == pe )
		goto _out32;
case 32:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 72: goto st33;
		case 99: goto st20;
		case 104: goto st33;
	}
	goto st19;
st33:
	if ( ++p == pe )
		goto _out33;
case 33:
	switch( (*p) ) {
		case 13: goto tr27;
		case 58: goto st34;
		case 67: goto st20;
		case 99: goto st20;
	}
	goto st19;
st34:
	if ( ++p == pe )
		goto _out34;
case 34:
	switch( (*p) ) {
		case 13: goto tr27;
		case 32: goto st34;
		case 67: goto st20;
		case 99: goto st20;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr47;
	goto st19;
tr47:
#line 31 "parser.rl"
	{ MARK(mark, p); }
	goto st35;
tr68:
#line 39 "parser.rl"
	{ MARK(mark, p); }
#line 31 "parser.rl"
	{ MARK(mark, p); }
	goto st35;
st35:
	if ( ++p == pe )
		goto _out35;
case 35:
#line 673 "parser.c"
	switch( (*p) ) {
		case 13: goto st0;
		case 67: goto st20;
		case 99: goto st20;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st35;
	goto st19;
st36:
	if ( ++p == pe )
		goto _out36;
case 36:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 89: goto st37;
		case 99: goto st20;
		case 121: goto st37;
	}
	goto st19;
st37:
	if ( ++p == pe )
		goto _out37;
case 37:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 80: goto st38;
		case 99: goto st20;
		case 112: goto st38;
	}
	goto st19;
st38:
	if ( ++p == pe )
		goto _out38;
case 38:
	switch( (*p) ) {
		case 13: goto tr27;
		case 67: goto st20;
		case 69: goto st39;
		case 99: goto st20;
		case 101: goto st39;
	}
	goto st19;
st39:
	if ( ++p == pe )
		goto _out39;
case 39:
	switch( (*p) ) {
		case 13: goto tr27;
		case 58: goto st0;
		case 67: goto st20;
		case 99: goto st20;
	}
	goto st19;
st40:
	if ( ++p == pe )
		goto _out40;
case 40:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 79: goto st41;
		case 99: goto st40;
		case 111: goto st41;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st41:
	if ( ++p == pe )
		goto _out41;
case 41:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 78: goto st42;
		case 99: goto st40;
		case 110: goto st42;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st42:
	if ( ++p == pe )
		goto _out42;
case 42:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 84: goto st43;
		case 99: goto st40;
		case 116: goto st43;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st43:
	if ( ++p == pe )
		goto _out43;
case 43:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 69: goto st44;
		case 99: goto st40;
		case 101: goto st44;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st44:
	if ( ++p == pe )
		goto _out44;
case 44:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 78: goto st45;
		case 99: goto st40;
		case 110: goto st45;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st45:
	if ( ++p == pe )
		goto _out45;
case 45:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 84: goto st46;
		case 99: goto st40;
		case 116: goto st46;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st46:
	if ( ++p == pe )
		goto _out46;
case 46:
	switch( (*p) ) {
		case 33: goto st17;
		case 45: goto st47;
		case 46: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 99: goto st40;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else if ( (*p) >= 65 )
			goto st17;
	} else
		goto st17;
	goto st0;
st47:
	if ( ++p == pe )
		goto _out47;
case 47:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 76: goto st48;
		case 84: goto st55;
		case 99: goto st40;
		case 108: goto st48;
		case 116: goto st55;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st48:
	if ( ++p == pe )
		goto _out48;
case 48:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 69: goto st49;
		case 99: goto st40;
		case 101: goto st49;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st49:
	if ( ++p == pe )
		goto _out49;
case 49:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr24;
		case 67: goto st40;
		case 78: goto st50;
		case 99: goto st40;
		case 110: goto st50;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
